--- a/_/scss/base/_typography.scss
+++ b/_/scss/base/_typography.scss
@@ -40,6 +40,5 @@ h3,
 h4{line-height: 150%;font-weight: 700;}
 h3{font-size: 11px;text-transform: uppercase;}
 
-h1{font-weight:500;font-size:36px;margin:100px auto;text-align:center}
+h1{font-weight:500;font-size:36px;margin:100px auto;text-align:center;}
 
-@include transition( all 0.8s ); 
