--- a/_/css/style.css
+++ b/_/css/style.css
@@ -1,1 +1,462 @@
-a,hr{padding:0}input[type=checkbox],th{vertical-align:bottom}article,aside,details,figure,footer,header,hr,nav,section,summary{display:block}a,body,button,input,select,textarea{margin:0}a,ins{text-decoration:none}abbr,address,article,aside,audio,b,blockquote,body,body div,caption,cite,code,dd,del,details,dfn,dl,dt,em,fieldset,figure,footer,form,h1,h2,h3,h4,h5,h6,header,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,p,pre,q,samp,section,small,span,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font-weight:400;vertical-align:baseline;background:0 0}h1,h2,h3,h4,mark,strong,th{font-weight:700}ins,mark{background-color:#fcd700;color:#000}html{box-sizing:border-box;overflow-y:scroll;background-color:#121623}*,:after,:before{box-sizing:inherit}embed,img,object{max-width:100%}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}a{font-size:100%;vertical-align:baseline;background:0 0;color:#2C519B}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted #000;cursor:help}table{border-collapse:collapse;border-spacing:0;font:100%}td{font-weight:400;vertical-align:top}hr{height:1px;border:0;border-top:1px solid #ccc;margin:1em 0}input,select{vertical-align:middle}pre{white-space:pre;white-space:pre-wrap;white-space:pre-line;word-wrap:break-word}input[type=radio]{vertical-align:text-bottom}.ie7 input[type=checkbox]{vertical-align:baseline}.ie6 input{vertical-align:text-bottom}input,select,textarea{font:99% sans-serif;color:#ECF0F6;outline:0}small{font-size:85%}td,td img{vertical-align:top}sub,sup{font-size:75%;line-height:0;position:relative}sup{top:-.5em}sub{bottom:-.25em}code,kbd,pre,samp{font-family:monospace,sans-serif}.clickable,button,input[type=button],input[type=file],input[type=submit],label{cursor:pointer}button,input[type=button]{width:auto;overflow:visible}.ie7 img{-ms-interpolation-mode:bicubic}.clearfix:after,.clearfix:before{content:"\0020";display:block;height:0;overflow:hidden}input[type=password],input[type=text],select,textarea{border:1px solid #ECF0F6;outline:0;color:#9D9D9D;height:34px;font-size:11px}.clearfix:after{clear:both}.clearfix{zoom:1}@font-face{font-family:"San Francisco";font-weight:100;src:url(https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-ultralight-webfont.woff2)}@font-face{font-family:"San Francisco";font-weight:200;src:url(https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-thin-webfont.woff2)}@font-face{font-family:"San Francisco";font-weight:400;src:url(https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-medium-webfont.woff2)}@font-face{font-family:"San Francisco";font-weight:500;src:url(https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-semibold-webfont.woff2)}@font-face{font-family:"San Francisco";font-weight:700;src:url(https://applesocial.s3.amazonaws.com/assets/styles/fonts/sanfrancisco/sanfranciscodisplay-bold-webfont.woff2)}body{font:17px/30px "San Francisco",Arial,Helvetica;min-width:320px;color:#ccc}h1,h2,h3,h4{line-height:150%}h3{font-size:11px;text-transform:uppercase}h1{font-weight:500;font-size:36px;margin:100px auto;text-align:center}.wrapper{width:1310px;margin:0 auto}b{font-weight:600}a:focus{outline:0}ol,ul{list-style:none}input[type=password],input[type=text],textarea{text-indent:15px;font-family:"Open Sans"}input[type=text]{padding-top:0}input[type=text]:focus,select:focus,textarea:focus{box-shadow:0 0 10px rgba(0,0,0,.1);transition:.4s all}textarea{min-height:130px;padding:15px;text-indent:0}select{float:left;border-radius:1px;padding:0 8px;width:220px;background:url(../img/icon/select-arrow.png) right 14px no-repeat #FFF;overflow:hidden;-webkit-appearance:none;-ms-appearance:none;-moz-appearance:none;appearance:none}::-webkit-input-placeholder{font-size:10px;color:#D5DAE1}::-moz-placeholder{font-size:10px;color:#D5DAE1}::-moz-selection{background:rgba(25,25,25,.1);text-shadow:none}::selection{background:rgba(25,25,25,.1);text-shadow:none}a:link{-webkit-tap-highlight-color:transparent}mark{font-style:italic}label{color:#6b7684;cursor:default}p{color:#9d9d9d}
+/*
+	HTML5 Reset :: style.css
+	----------------------------------------------------------
+	We have learned much from/been inspired by/taken code where offered from:
+	Eric Meyer					:: http://meyerweb.com
+	HTML5 Doctor				:: http://html5doctor.com
+	and the HTML5 Boilerplate	:: http://html5boilerplate.com
+-------------------------------------------------------------------------------*/
+/* Let's default this puppy out
+-------------------------------------------------------------------------------*/
+html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font-weight: normal;
+  vertical-align: baseline;
+  background: transparent; }
+
+article, aside, figure, footer, header, nav, section, details, summary {
+  display: block; }
+
+/* Handle box-sizing while better addressing child elements:
+   http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
+html {
+  box-sizing: border-box; }
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit; }
+
+/* consider resetting the default cursor: https://gist.github.com/murtaugh/5247154 */
+/* Responsive images and other embedded objects */
+/* if you don't have full control over `img` tags (if you have to overcome attributes), consider adding height: auto */
+img,
+object,
+embed {
+  max-width: 100%; }
+
+/*
+   Note: keeping IMG here will cause problems if you're using foreground images as sprites.
+	In fact, it *will* cause problems with Google Maps' controls at small size.
+	If this is the case for you, try uncommenting the following:
+#map img {
+		max-width: none;
+}
+*/
+/* force a vertical scrollbar to prevent a jumpy page */
+html {
+  overflow-y: scroll; }
+
+/* we use a lot of ULs that aren't bulleted.
+	you'll have to restore the bullets within content,
+	which is fine because they're probably customized anyway */
+ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none; }
+
+a {
+  margin: 0;
+  padding: 0;
+  font-size: 100%;
+  vertical-align: baseline;
+  background: transparent; }
+
+del {
+  text-decoration: line-through; }
+
+abbr[title], dfn[title] {
+  border-bottom: 1px dotted #000;
+  cursor: help; }
+
+/* tables still need cellspacing="0" in the markup */
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+th {
+  font-weight: bold;
+  vertical-align: bottom; }
+
+td {
+  font-weight: normal;
+  vertical-align: top; }
+
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0; }
+
+input, select {
+  vertical-align: middle; }
+
+pre {
+  white-space: pre;
+  /* CSS2 */
+  white-space: pre-wrap;
+  /* CSS 2.1 */
+  white-space: pre-line;
+  /* CSS 3 (and 2.1 as well, actually) */
+  word-wrap: break-word;
+  /* IE */ }
+
+input[type="radio"] {
+  vertical-align: text-bottom; }
+
+input[type="checkbox"] {
+  vertical-align: bottom; }
+
+.ie7 input[type="checkbox"] {
+  vertical-align: baseline; }
+
+.ie6 input {
+  vertical-align: text-bottom; }
+
+select, input, textarea {
+  font: 99% sans-serif; }
+
+table {
+  font-size: inherit;
+  font: 100%; }
+
+small {
+  font-size: 85%; }
+
+strong {
+  font-weight: bold; }
+
+td, td img {
+  vertical-align: top; }
+
+/* Make sure sup and sub don't mess with your line-heights http://gist.github.com/413930 */
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative; }
+
+sup {
+  top: -0.5em; }
+
+sub {
+  bottom: -0.25em; }
+
+/* standardize any monospaced elements */
+pre, code, kbd, samp {
+  font-family: monospace, sans-serif; }
+
+/* hand cursor on clickable elements */
+.clickable,
+label,
+input[type=button],
+input[type=submit],
+input[type=file],
+button {
+  cursor: pointer; }
+
+/* Webkit browsers add a 2px margin outside the chrome of form elements */
+button, input, select, textarea {
+  margin: 0; }
+
+/* make buttons play nice in IE */
+button,
+input[type=button] {
+  width: auto;
+  overflow: visible; }
+
+/* scale images in IE7 more attractively */
+.ie7 img {
+  -ms-interpolation-mode: bicubic; }
+
+/* prevent BG image flicker upon hover
+   (commented out as usage is rare, and the filter syntax messes with some pre-processors)
+.ie6 html {filter: expression(document.execCommand("BackgroundImageCache", false, true));}
+*/
+/* let's clear some floats */
+.clearfix:before, .clearfix:after {
+  content: "\0020";
+  display: block;
+  height: 0;
+  overflow: hidden; }
+
+.clearfix:after {
+  clear: both; }
+
+.clearfix {
+  zoom: 1; }
+
+body {
+  font: 14px/200% "Roboto", Arial, Helvetica; }
+
+h1,
+h2,
+h3,
+h4 {
+  line-height: 150%;
+  font-weight: 700; }
+
+h3 {
+  font-size: 11px;
+  text-transform: uppercase; }
+
+body {
+  min-width: 320px; }
+
+.wrapper {
+  width: 1310px;
+  margin: 0 auto; }
+
+header .wrap {
+  max-width: 1920px;
+  width: 100%;
+  height: 100%; }
+
+.transit04, header nav a, header nav a:before, header .acc .lang, header .btn.registerC, header .btn.loginC {
+  transition: .25s all; }
+
+html {
+  background-color: #1A1F32; }
+
+select, input, textarea {
+  color: #ECF0F6;
+  outline: none; }
+
+b {
+  font-weight: 600; }
+
+a {
+  color: #2C519B;
+  text-decoration: none; }
+
+a:focus {
+  outline: none; }
+
+ul, ol {
+  list-style: none; }
+
+textarea,
+input[type=password],
+input[type=text] {
+  font-size: 11px;
+  color: #9D9D9D;
+  text-indent: 15px;
+  outline: none;
+  border: 1px solid #ECF0F6;
+  height: 34px;
+  font-family: "Roboto"; }
+
+input[type=text] {
+  padding-top: 0; }
+
+select:focus,
+textarea:focus,
+input[type=text]:focus {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: .4s all; }
+
+textarea {
+  min-height: 130px;
+  padding: 15px;
+  text-indent: 0; }
+
+select {
+  float: left;
+  background: #FFF;
+  border: 1px #ECF0F6 solid;
+  outline: none;
+  border-radius: 1px;
+  color: #9D9D9D;
+  padding: 0 8px;
+  width: 220px;
+  height: 34px;
+  font-size: 11px;
+  background: #FFF url(../img/icon/select-arrow.png) no-repeat right 14px;
+  -webkit-appearance: none;
+  overflow: hidden;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -ms-appearance: none;
+  -moz-appearance: none;
+  appearance: none; }
+
+::-webkit-input-placeholder {
+  font-size: 10px;
+  color: #D5DAE1; }
+
+::-moz-placeholder {
+  font-size: 10px;
+  color: #D5DAE1; }
+
+/* Custom text-selection colors (remove any text shadows: http://twitter.com/miketaylr/status/12228805301) */
+::-moz-selection {
+  background: rgba(25, 25, 25, 0.1);
+  text-shadow: none; }
+
+::selection {
+  background: rgba(25, 25, 25, 0.1);
+  text-shadow: none; }
+
+/*	j.mp/webkit-tap-highlight-color */
+a:link {
+  -webkit-tap-highlight-color: transparent; }
+
+ins {
+  background-color: #fcd700;
+  color: #000;
+  text-decoration: none; }
+
+mark {
+  background-color: #fcd700;
+  color: #000;
+  font-style: italic;
+  font-weight: bold; }
+
+/* Mozilla dosen't style place holders by default */
+ul {
+  list-style: none; }
+
+label {
+  color: #6b7684;
+  cursor: default; }
+
+p {
+  color: #9d9d9d; }
+
+header {
+  width: 100%;
+  height: 70px;
+  background-color: #121623;
+  padding: 0 15px;
+  display: block;
+  position: relative; }
+  header .logo {
+    background: url(../img/logo.png) no-repeat;
+    width: 244px;
+    height: 40px;
+    margin: 16px 0 0 0;
+    text-indent: -9999px;
+    overflow: hidden;
+    position: absolute;
+    float: left; }
+  header nav {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: #FFF;
+    font-size: 16px;
+    text-transform: uppercase; }
+  header nav li {
+    display: inline;
+    height: 100%; }
+    header nav li.active > a {
+      color: #67C0E7;
+      font-weight: 500; }
+  header nav a {
+    display: inline-block;
+    padding: 0 1.30208333333333%;
+    height: 100%;
+    line-height: 100%;
+    color: #FFFFFF;
+    line-height: 440%;
+    font-weight: 400;
+    position: relative; }
+    header nav a:hover {
+      color: #67C0E7;
+      background-color: #161B2B; }
+    header nav a:before {
+      height: 0;
+      width: 100%;
+      content: " ";
+      position: absolute;
+      top: 0;
+      left: 0; }
+    header nav a:hover:before {
+      height: 5px;
+      background-color: #67C0E7; }
+  header .acc {
+    position: absolute;
+    right: 0;
+    height: 100%;
+    top: 15px;
+    right: 15px; }
+    header .acc .lang {
+      float: right;
+      border-left: #5A5D6A solid 1px;
+      cursor: pointer;
+      max-height: 13px;
+      position: relative;
+      min-width: 43px;
+      text-indent: 10px;
+      overflow: hidden;
+      margin: 15px 0 0 15px; }
+      header .acc .lang a {
+        float: left;
+        width: 100%;
+        color: #FFFFFF;
+        line-height: 100%;
+        padding: 10px 0; }
+        header .acc .lang a:first-child {
+          padding: 0 0 10px 0; }
+      header .acc .lang:before {
+        background: url(../img/icons/sprite.png) -52px -8px;
+        width: 9px;
+        height: 5px;
+        content: " ";
+        position: absolute;
+        top: 4px;
+        right: 10px; }
+      header .acc .lang.hover {
+        max-height: 100%; }
+        header .acc .lang.hover a:not(:first-child) {
+          background: #121623; }
+    header .acc .iconLinks, header .acc .helpCenter, header .acc .liveChat {
+      width: 20px;
+      height: 20px;
+      background: url(../img/icons/sprite.png) no-repeat;
+      float: right;
+      margin: 10px 0 0 15px;
+      text-indent: -9999px;
+      overflow: hidden; }
+    header .acc .iconLinks:hover, header .acc .helpCenter:hover, header .acc .liveChat:hover {
+      margin-top: 11px; }
+    header .acc .helpCenter {
+      background-position: -26px 0; }
+    header .acc .liveChat {
+      background-position: 0 0; }
+    header .acc .btn {
+      float: right;
+      height: 32px;
+      line-height: 30px;
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 14px;
+      letter-spacing: 1px;
+      font-weight: 400;
+      border: 2px solid transparent;
+      margin: 5px 0 0 15px;
+      padding: 0 20px; }
+  header .btn.borderBR6 {
+    border-radius: 6px; }
+  header .btn.registerC {
+    color: #FFFFFF;
+    background-color: #46AE5F; }
+  header .btn.loginC {
+    color: #67C0E7;
+    border-color: #67C0E7; }
+    header .btn.loginC:hover {
+      color: #FFFFFF;
+      background-color: #67C0E7; }
