--- a/_/scss/base/_grid.scss
+++ b/_/scss/base/_grid.scss
@@ -1,3 +1,5 @@
-
-body {min-width: 320px;margin: 0;}
-.wrapper{width: 1310px;margin:0 auto}
+body {min-width: 320px;}
+.wrapper{width: 1310px;margin:0 auto;}
+header{
+	.wrap{max-width:1920px;width:100%;height:100%}
+}
