--- a/_/scss/base/_typography.scss
+++ b/_/scss/base/_typography.scss
@@ -5,3 +5,4 @@ h3,
 h4{line-height: 150%;font-weight: 700;}
 h3{font-size: 11px;text-transform: uppercase;}
 
+nav a{font-family:'Raleway';font-weight:500}
