--- a/_/scss/style.scss
+++ b/_/scss/style.scss
@@ -22,7 +22,9 @@
 
 // Components 
 @import "components/buttons";
-@import "components/navigation";
+
+// Vendors 
+@import "vendors/slick.scss";
 
 // Pages
 @import "pages/home";
