--- a/_/scss/config/_config.scss
+++ b/_/scss/config/_config.scss
@@ -22,6 +22,7 @@ $titleC : #727888;
 $title2ndC : #484F5E;
 $errorC : #C25555;
 $borderFooterC : #505767;
+$lightboxBackgroundC : #161A29;
 
 
 //************************//
