--- a/_/scss/base/_typography.scss
+++ b/_/scss/base/_typography.scss
@@ -6,3 +6,4 @@ h4{line-height: 150%;font-weight: 700;}
 h3{font-size: 11px;text-transform: uppercase;}
 nav a{font-family:'Raleway';font-weight:500}
 p{color: #9d9d9d}
+.lightboxContent h3{font-size:18px;}
